[package]
name = "tmoq"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
moq-lite = "0.12.0"
moq-native = "0.12.0"
moq-rs = "0.0.0"
moq-transport = "0.12.2"
quinn = "0.11.9"
rcgen = "0.14.7"
rustls = "0.23.36"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
url = "2.5.8"
